Update contact form ID

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <h2 class="text-3xl font-bold mb-2 text-center">Get in Touch</h2>
             <p class="text-theme-muted text-center mb-8">Have a feature request or found a bug? Let us know.</p>
             
-            <form action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST" class="space-y-4">
+            <form action="https://formspree.io/f/xgvgyeob" method="POST" class="space-y-4">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="space-y-2">
                         <label class="text-xs font-bold mono text-[#F08E74]">NAME</label>
