--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <svg id="icon-moon" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
                 </button>
 
-                <a href="https://github.com/NjauHarun/avior" target="_blank" class="flex items-center gap-2 text-sm text-theme-muted hover:text-[#F08E74] transition-colors mono group">
+                <a href="https://github.com/NjauHarun/AviorNotes" target="_blank" class="flex items-center gap-2 text-sm text-theme-muted hover:text-[#F08E74] transition-colors mono group">
                     <span>GitHub</span>
                     <svg class="w-4 h-4 group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
                 </a>
@@ -352,7 +352,7 @@
                     </div>
                 </div>
                 <div class="flex gap-8 text-sm">
-                    <a href="https://github.com/NjauHarun/avior" class="text-theme-muted hover:text-[#F08E74]">GitHub</a>
+                    <a href="https://github.com/NjauHarun/AviorNotes" class="text-theme-muted hover:text-[#F08E74]">GitHub</a>
                     <a href="#contact" class="text-theme-muted hover:text-[#F08E74]">Contact</a>
                 </div>
             </div>
