Add light/dark mode logic and assets

--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
             <h2 class="text-3xl font-bold mb-2 text-center">Get in Touch</h2>
             <p class="text-theme-muted text-center mb-8">Have a feature request or found a bug? Let us know.</p>
             
+            <!-- Replace YOUR_FORMSPREE_ID with your actual ID -->
             <form action="https://formspree.io/f/xgvgyeob" method="POST" class="space-y-4">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="space-y-2">
@@ -361,7 +362,7 @@
 
     <script>
         const GITHUB_USERNAME = 'NjauHarun'; 
-        const REPO_NAME = 'avior'; 
+        const REPO_NAME = 'AviorNotes'; 
 
         document.addEventListener('DOMContentLoaded', () => {
             // --- THEME TOGGLE LOGIC ---
