Add legal pages and update footer

--- a/index.html
+++ b/index.html
@@ -395,8 +395,12 @@
                         <p class="mt-4 pt-4 border-t border-theme">Avior Notes is the property of STUDIO euclid Ltd.<br>Unauthorized distribution or resale is strictly prohibited.</p>
                     </div>
                 </div>
-                <div class="flex gap-8 text-sm">
-                    <a href="https://github.com/NjauHarun/AviorNotes" class="text-theme-muted hover:text-[#F08E74]">GitHub</a>
+                
+                <!-- UPDATED RIGHT COLUMN WITH LEGAL LINKS -->
+                <div class="flex flex-wrap gap-x-8 gap-y-2 text-sm">
+                    <a href="privacy.html" class="text-theme-muted hover:text-[#F08E74]">Privacy Policy</a>
+                    <a href="terms.html" class="text-theme-muted hover:text-[#F08E74]">Terms of Service</a>
+                    <a href="https://github.com/NjauHarun/AviorNotes" target="_blank" class="text-theme-muted hover:text-[#F08E74]">GitHub</a>
                     <a href="#contact" class="text-theme-muted hover:text-[#F08E74]">Contact</a>
                 </div>
             </div>
